--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,6 +7,7 @@ libklvanc_la_SOURCES  = core-buffer.c
 libklvanc_la_SOURCES += core-module1.c
 libklvanc_la_SOURCES += core-packet-eia_708b.c
 libklvanc_la_SOURCES += core-packet-eia_608.c
+libklvanc_la_SOURCES += core-packet-scte_104.c
 libklvanc_la_SOURCES += core-packet-payload_information.c
 libklvanc_la_SOURCES += core-packets.c
 libklvanc_la_SOURCES += core-did.c
@@ -28,6 +29,7 @@ libklvanc_include_HEADERS += libklvanc/did.h
 libklvanc_include_HEADERS += libklvanc/pixels.h
 libklvanc_include_HEADERS += libklvanc/vanc-eia_708b.h
 libklvanc_include_HEADERS += libklvanc/vanc-eia_608.h
+libklvanc_include_HEADERS += libklvanc/vanc-scte_104.h
 libklvanc_include_HEADERS += libklvanc/vanc-module1.h
 libklvanc_include_HEADERS += libklvanc/vanc-packets.h
 libklvanc_include_HEADERS += libklvanc/vanc-payload_information.h
