--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -6,9 +6,10 @@ BLACKMAGIC_SDK_PATH = ../include/decklink-sdk
 CFLAGS = -Wall -DVERSION=\"$(VERSION)\" -DPROG="\"$(PACKAGE)\"" -D_FILE_OFFSET_BITS=64 -O3 \
 	-D_BSD_SOURCE \
 	--std=c99 \
-	-I../src \
 	-I$(BLACKMAGIC_SDK_PATH) \
-	-L../src/.libs -lklvanc -lpthread \
+	-I../src \
+	-I/usr/local/include \
+	-L../src/.libs -L/usr/local/lib -lklvanc -lpthread \
 	-DKL_USERSPACE -L/usr/local/lib -lz -ldl -lklvanc
 
 if DEBUG
@@ -18,13 +19,19 @@ endif
 CXXFLAGS = $(CFLAGS)
 
 SRC  = klvanc_util.c
+SRC += $(BLACKMAGIC_SDK_PATH)//DeckLinkAPIDispatch.cpp
 SRC += demo.c
 SRC += capture.cpp
-SRC += $(BLACKMAGIC_SDK_PATH)//DeckLinkAPIDispatch.cpp
+SRC += smpte2038.c
+SRC += udp.c
+SRC += url.c
+SRC += bitstream.c
 
 bin_PROGRAMS  = klvanc_util
 bin_PROGRAMS += klvanc_capture
+bin_PROGRAMS += klvanc_smpte2038
 
 klvanc_util_SOURCES = $(SRC)
 klvanc_capture_SOURCES = $(SRC)
+klvanc_smpte2038_SOURCES = $(SRC)
 
