Lib-ify some common SMPTE2038 funcs.

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ src/libklvanc_la-core-packet-payload_information.lo
 src/libklvanc_la-core-packets.lo
 src/libklvanc_la-core.lo
 src/libklvanc_la-core-checksum.lo
+src/libklvanc_la-smpte2038.lo
