--- a/configure.ac
+++ b/configure.ac
@@ -16,6 +16,10 @@ AC_PROG_LIBTOOL
 
 # Checks for header files.
 AC_CHECK_HEADERS([arpa/inet.h fcntl.h netinet/in.h stdint.h stdlib.h string.h sys/ioctl.h sys/socket.h sys/time.h unistd.h])
+AC_CHECK_HEADERS([zlib.h],
+                 [break],
+                 [AC_MSG_ERROR([zlib-dev headers not found or not usable])])
+
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_TYPE_UINT16_T
