--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -24,6 +24,7 @@ SRC += capture.cpp
 SRC += smpte2038.c
 SRC += udp.c
 SRC += url.c
+SRC += ts_packetizer.c
 
 bin_PROGRAMS  = klvanc_util
 bin_PROGRAMS += klvanc_capture
