--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -7,9 +7,8 @@ CFLAGS = -Wall -DVERSION=\"$(VERSION)\" -DPROG="\"$(PACKAGE)\"" -D_FILE_OFFSET_B
 	-D_BSD_SOURCE \
 	-I$(BLACKMAGIC_SDK_PATH) \
 	-I../src \
-	-I/usr/local/include \
-	-L../src/.libs -L/usr/local/lib -lklvanc -lpthread \
-	-DKL_USERSPACE -L/usr/local/lib -lz -ldl -lklvanc
+	-L../src/.libs -lklvanc -lpthread \
+	-DKL_USERSPACE -lz -ldl -lklvanc
 
 if DEBUG
 	CFLAGS += -g
