--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 AUTOMAKE_OPTIONS = foreign
 SUBDIRS = src tools
-EXTRA_DIST = include .doxygen/libklvanc.doxyconf .doxygen/include
+EXTRA_DIST = include doxygen/libklvanc.doxyconf doxygen/include
 
 docs:
-	cd .doxygen && doxygen libklvanc.doxyconf
+	cd doxygen && doxygen libklvanc.doxyconf
 
