klvan_capture tool: Added minimal realtime curses display mode (-M)

--- a/configure.ac
+++ b/configure.ac
@@ -26,6 +26,9 @@ AC_CHECK_HEADERS([arpa/inet.h fcntl.h netinet/in.h stdint.h stdlib.h string.h sy
 AC_CHECK_HEADERS([zlib.h],
                  [break],
                  [AC_MSG_ERROR([zlib-dev headers not found or not usable])])
+AC_CHECK_HEADERS([curses.h],
+                 [break],
+                 [AC_MSG_ERROR([curses headers not found or not usable])])
 
 
 # Checks for typedefs, structures, and compiler characteristics.
