Add functions to manage generation of valid VANC lines from multiple packets
The SMPTE 291-1-2011 specification for SDI VANC has rules related to the
placement of VANC packets within VANC lines.  Add routines to enforce those
rules (in particular related to ensuring VANC packets are contiguous).  The
framework also allows for dealing with overlapping VANC packets (to prevent
some VANC packets from overwriting others).  This is particularly important
where want to place multiple VANC packets on a given line but we don't
specify/know/care where on the line they should appear.

Also ensure that we know go past the end-of-line with the set of VANC packets
intended for a given line.

Finally, have the function that generates the final VANC line ensure there
are no illegal sequences in the VANC packet which violate the spec.  If
such a malformed packet is found, it will no be included in the final line.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -10,6 +10,7 @@ libklvanc_la_SOURCES += core-packet-eia_608.c
 libklvanc_la_SOURCES += core-packet-scte_104.c
 libklvanc_la_SOURCES += core-packet-payload_information.c
 libklvanc_la_SOURCES += core-packets.c
+libklvanc_la_SOURCES += core-lines.c
 libklvanc_la_SOURCES += core-did.c
 libklvanc_la_SOURCES += core-pixels.c
 libklvanc_la_SOURCES += core-checksum.c
@@ -36,6 +37,7 @@ libklvanc_include_HEADERS += libklvanc/vanc-eia_608.h
 libklvanc_include_HEADERS += libklvanc/vanc-scte_104.h
 libklvanc_include_HEADERS += libklvanc/vanc-module1.h
 libklvanc_include_HEADERS += libklvanc/vanc-packets.h
+libklvanc_include_HEADERS += libklvanc/vanc-lines.h
 libklvanc_include_HEADERS += libklvanc/vanc-payload_information.h
 libklvanc_include_HEADERS += libklvanc/vanc-checksum.h
 libklvanc_include_HEADERS += libklvanc/klbitstream_readwriter.h
