Modify configure to generate quiet builds by default

--- a/configure.ac
+++ b/configure.ac
@@ -6,6 +6,7 @@ AC_INIT([libklvanc], [1.0], [stoth@kernellabs.com])
 AM_INIT_AUTOMAKE
 AC_CONFIG_MACRO_DIR([m4])
 AC_CANONICAL_HOST
+AM_SILENT_RULES([yes])
 
 # Checks for programs.
 AC_PROG_CC
