--- a/.gitignore
+++ b/.gitignore
@@ -30,4 +30,5 @@ src/libklvanc_la-core-packets.lo
 src/libklvanc_la-core.lo
 src/libklvanc_la-core-checksum.lo
 src/libklvanc_la-smpte2038.lo
+src/libklvanc_la-core-lines.lo
 doxygen/html
