distcheck failed. Fixed.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -41,4 +41,5 @@ libklvanc_include_HEADERS += libklvanc/vanc-lines.h
 libklvanc_include_HEADERS += libklvanc/vanc-payload_information.h
 libklvanc_include_HEADERS += libklvanc/vanc-checksum.h
 libklvanc_include_HEADERS += libklvanc/klbitstream_readwriter.h
+libklvanc_include_HEADERS += libklvanc/klrestricted_code_path.h
 
