Feature: push the VANC caching mechanism into the core library, and adjust capture tools to accomodate the change. After the change it was retested in CURSES and non-cirses mode, no issues found. Also, when app closes, adjusted the non-curses vanc summary for easier reading.

--- a/.gitignore
+++ b/.gitignore
@@ -31,4 +31,5 @@ src/libklvanc_la-core.lo
 src/libklvanc_la-core-checksum.lo
 src/libklvanc_la-smpte2038.lo
 src/libklvanc_la-core-lines.lo
+src/libklvanc_la-core-cache.lo
 doxygen/html
