--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -16,6 +16,7 @@ libklvanc_la_SOURCES += core-pixels.c
 libklvanc_la_SOURCES += core-checksum.c
 libklvanc_la_SOURCES += core.c
 libklvanc_la_SOURCES += smpte2038.c
+libklvanc_la_SOURCES += core-cache.c
 libklvanc_la_SOURCES += core-private.h xorg-list.h
 
 libklvanc_la_CFLAGS = -Wall -DVERSION=\"$(VERSION)\" -DPROG="\"$(PACKAGE)\"" \
@@ -42,4 +43,5 @@ libklvanc_include_HEADERS += libklvanc/vanc-payload_information.h
 libklvanc_include_HEADERS += libklvanc/vanc-checksum.h
 libklvanc_include_HEADERS += libklvanc/klbitstream_readwriter.h
 libklvanc_include_HEADERS += libklvanc/klrestricted_code_path.h
+libklvanc_include_HEADERS += libklvanc/cache.h
 
