Add support for a priorietary kernel labs u64 little endian frame counter message.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -16,6 +16,7 @@ libklvanc_la_SOURCES += core-pixels.c
 libklvanc_la_SOURCES += core-checksum.c
 libklvanc_la_SOURCES += smpte2038.c
 libklvanc_la_SOURCES += core-cache.c
+libklvanc_la_SOURCES += core-packet-kl_u64le_counter.c
 libklvanc_la_SOURCES += core-private.h xorg-list.h
 
 libklvanc_la_CFLAGS = -Wall -DVERSION=\"$(VERSION)\" -DPROG="\"$(PACKAGE)\"" \
