klvanc_capture support for KL proprietary frame counter VANC message

--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,5 @@ src/libklvanc_la-core-checksum.lo
 src/libklvanc_la-smpte2038.lo
 src/libklvanc_la-core-lines.lo
 src/libklvanc_la-core-cache.lo
+src/libklvanc_la-core-packet-kl_u64le_counter.lo
 doxygen/html
