Add new test tool which takes 104 packet, deserializes/re-serializes, then compares
This tool is specifically to exercise the serialization and
deserialization functionality related to SCTE-104 processing.  It
can take in pre-defined SCTE-104 VANC packets and look for issues
where we don't end up with matching data if we deserialize and
then re-serialize the data.

Only includes one sample packet for now, but it lays the
groundwork for a series of sample packets which can be part of
a regression test.

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -24,6 +24,7 @@ SRC += $(BLACKMAGIC_SDK_PATH)//DeckLinkAPIDispatch.cpp
 SRC += demo.c
 SRC += capture.cpp
 SRC += smpte2038.c
+SRC += scte104.c
 SRC += udp.c
 SRC += url.c
 SRC += ts_packetizer.c
@@ -33,10 +34,12 @@ SRC += pes_extractor.c
 bin_PROGRAMS  = klvanc_util
 bin_PROGRAMS += klvanc_capture
 bin_PROGRAMS += klvanc_smpte2038
+bin_PROGRAMS += klvanc_scte104
 
 klvanc_util_SOURCES = $(SRC)
 klvanc_capture_SOURCES = $(SRC)
 klvanc_smpte2038_SOURCES = $(SRC)
+klvanc_scte104_SOURCES = $(SRC)
 
 libklvanc_noinst_includedir = $(includedir)
 
