--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -27,6 +27,7 @@ SRC += parse.cpp
 SRC += smpte2038.c
 SRC += scte104.c
 SRC += genscte104.c
+SRC += eia708.c
 SRC += udp.c
 SRC += url.c
 SRC += ts_packetizer.c
@@ -39,6 +40,7 @@ bin_PROGRAMS += klvanc_parse
 bin_PROGRAMS += klvanc_smpte2038
 bin_PROGRAMS += klvanc_scte104
 bin_PROGRAMS += klvanc_genscte104
+bin_PROGRAMS += klvanc_eia708
 
 klvanc_util_SOURCES = $(SRC)
 klvanc_capture_SOURCES = $(SRC)
@@ -46,6 +48,7 @@ klvanc_parse_SOURCES = $(SRC)
 klvanc_smpte2038_SOURCES = $(SRC)
 klvanc_scte104_SOURCES = $(SRC)
 klvanc_genscte104_SOURCES = $(SRC)
+klvanc_eia708_SOURCES = $(SRC)
 
 libklvanc_noinst_includedir = $(includedir)
 
