Change "Payload Information" to "AFD" to refer to proper specification
The module that implements SMPTE 2016-3 for AFD over VANC was
incorrectly named as "payload information", which is actually a
valid VANC type but totally different from AFD.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,7 +8,7 @@ libklvanc_la_SOURCES += core-module1.c
 libklvanc_la_SOURCES += core-packet-eia_708b.c
 libklvanc_la_SOURCES += core-packet-eia_608.c
 libklvanc_la_SOURCES += core-packet-scte_104.c
-libklvanc_la_SOURCES += core-packet-payload_information.c
+libklvanc_la_SOURCES += core-packet-afd.c
 libklvanc_la_SOURCES += core-packets.c
 libklvanc_la_SOURCES += core-lines.c
 libklvanc_la_SOURCES += core-did.c
@@ -40,7 +40,7 @@ libklvanc_include_HEADERS += libklvanc/vanc-scte_104.h
 libklvanc_include_HEADERS += libklvanc/vanc-module1.h
 libklvanc_include_HEADERS += libklvanc/vanc-packets.h
 libklvanc_include_HEADERS += libklvanc/vanc-lines.h
-libklvanc_include_HEADERS += libklvanc/vanc-payload_information.h
+libklvanc_include_HEADERS += libklvanc/vanc-afd.h
 libklvanc_include_HEADERS += libklvanc/vanc-checksum.h
 libklvanc_include_HEADERS += libklvanc/klrestricted_code_path.h
 libklvanc_include_HEADERS += libklvanc/cache.h
