--- a/.gitignore
+++ b/.gitignore
@@ -18,19 +18,5 @@ ltmain.sh
 m4/
 missing
 libklvanc.la
-src/libklvanc_la-core-buffer.lo
-src/libklvanc_la-core-module1.lo
-src/libklvanc_la-core-packet-eia_708b.lo
-src/libklvanc_la-core-did.lo
-src/libklvanc_la-core-packet-eia_608.lo
-src/libklvanc_la-core-packet-scte_104.lo
-src/libklvanc_la-core-pixels.lo
-src/libklvanc_la-core-packet-payload_information.lo
-src/libklvanc_la-core-packets.lo
-src/libklvanc_la-core.lo
-src/libklvanc_la-core-checksum.lo
-src/libklvanc_la-smpte2038.lo
-src/libklvanc_la-core-lines.lo
-src/libklvanc_la-core-cache.lo
-src/libklvanc_la-core-packet-kl_u64le_counter.lo
+src/libklvanc_la-*.lo
 doxygen/html
