Makefile.am: distcheck failing, need to remove reference to a non-extistent dir.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 AUTOMAKE_OPTIONS = foreign
 SUBDIRS = src tools
-EXTRA_DIST = include doxygen/libklvanc.doxyconf doxygen/include
+EXTRA_DIST = doxygen/libklvanc.doxyconf doxygen/include
 
 docs:
 	cd doxygen && doxygen libklvanc.doxyconf
