Add "make test" Makefile target
Introduce a "make test" target which can be used to
validate the basic functionality of the core library.

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,3 +5,5 @@ EXTRA_DIST = doxygen/libklvanc.doxyconf doxygen/include
 docs:
 	cd doxygen && doxygen libklvanc.doxyconf
 
+test:
+	cd tools && make test
