--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,6 +8,7 @@ libklvanc_la_SOURCES += core-packet-eia_708b.c
 libklvanc_la_SOURCES += core-packet-eia_608.c
 libklvanc_la_SOURCES += core-packet-scte_104.c
 libklvanc_la_SOURCES += core-packet-afd.c
+libklvanc_la_SOURCES += core-packet-sdp.c
 libklvanc_la_SOURCES += core-packets.c
 libklvanc_la_SOURCES += core-lines.c
 libklvanc_la_SOURCES += core-did.c
@@ -39,6 +40,7 @@ libklvanc_include_HEADERS += libklvanc/vanc-scte_104.h
 libklvanc_include_HEADERS += libklvanc/vanc-packets.h
 libklvanc_include_HEADERS += libklvanc/vanc-lines.h
 libklvanc_include_HEADERS += libklvanc/vanc-afd.h
+libklvanc_include_HEADERS += libklvanc/vanc-sdp.h
 libklvanc_include_HEADERS += libklvanc/vanc-checksum.h
 libklvanc_include_HEADERS += libklvanc/klrestricted_code_path.h
 libklvanc_include_HEADERS += libklvanc/cache.h
