Turn parse.cpp into parse.c

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -14,11 +14,9 @@ if DEBUG
 	CFLAGS += -g
 endif
 
-CXXFLAGS = $(CFLAGS)
-
 SRC  = klvanc_util.c
 SRC += demo.c
-SRC += parse.cpp
+SRC += parse.c
 SRC += smpte2038.c
 SRC += scte104.c
 SRC += genscte104.c
