Cleanup dependencies from tools being moved to klvanc-tools
The stuff that required zlib, ncurses, and libklmonitoring was all
moved to klvanc-tools, and are not required by the libklvanc library
itself.

Update the configure/Makefile.am to not require those components,
which makes the library more portable for those who want to use
the library without the klvanc-tools command-line utilities.

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -4,11 +4,11 @@ AUTOMAKE_OPTIONS = foreign
 AM_CPPFLAGS = -DVERSION=\"$(VERSION)\" -DPROG="\"$(PACKAGE)\"" -D_FILE_OFFSET_BITS=64 \
 	-D_BSD_SOURCE \
 	-I$(top_srcdir)/src \
-	-DKL_USERSPACE -D__STDC_FORMAT_MACROS
+	-D__STDC_FORMAT_MACROS
 
 AM_CFLAGS = -Wall -O3
 
-LDADD = ../src/libklvanc.la -lpthread -lz -ldl
+LDADD = ../src/libklvanc.la -lpthread -ldl
 
 if DEBUG
 	CFLAGS += -g
