Add klvanc_smpte2038 to "make test" target
Include the smpte2038 test tool in the make test target.  While the
thoroughness of the test itself needs to be vastly improved, at
least this gives us a basic sanity check and it demonstrates
example usage of the tool.

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -63,3 +63,4 @@ test: klvanc_eia708 klvanc_genscte104 klvanc_scte104 klvanc_smpte12_2 klvanc_afd
 	./klvanc_scte104
 	./klvanc_smpte12_2
 	./klvanc_afd
+	./klvanc_smpte2038 -i ../samples/smpte2038-sample-pid-01e9.ts -P 0x1e9
