--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -57,7 +57,7 @@ noinst_HEADERS += udp.h
 noinst_HEADERS += url.h
 noinst_HEADERS += version.h
 
-test: klvanc_eia708 klvanc_genscte104 klvanc_scte104 klvanc_smpte12_2 klvanc_afd
+test: klvanc_eia708 klvanc_genscte104 klvanc_scte104 klvanc_smpte12_2 klvanc_afd klvanc_smpte2038
 	./klvanc_eia708
 	./klvanc_genscte104
 	./klvanc_scte104
