Add test cases for OP-47 SDP VANC packets
Add a test utility to validate the OP-47 parser and generator,
as we have for other VANC types.

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -24,6 +24,7 @@ SRC += gensmpte2038.c
 SRC += eia708.c
 SRC += smpte12_2.c
 SRC += afd.c
+SRC += sdp.c
 SRC += udp.c
 SRC += url.c
 SRC += ts_packetizer.c
@@ -39,6 +40,7 @@ bin_PROGRAMS += klvanc_gensmpte2038
 bin_PROGRAMS += klvanc_eia708
 bin_PROGRAMS += klvanc_smpte12_2
 bin_PROGRAMS += klvanc_afd
+bin_PROGRAMS += klvanc_sdp
 
 klvanc_util_SOURCES = $(SRC)
 klvanc_parse_SOURCES = $(SRC)
@@ -49,6 +51,7 @@ klvanc_gensmpte2038_SOURCES = $(SRC)
 klvanc_eia708_SOURCES = $(SRC)
 klvanc_smpte12_2_SOURCES = $(SRC)
 klvanc_afd_SOURCES = $(SRC)
+klvanc_sdp_SOURCES = $(SRC)
 
 libklvanc_noinst_includedir = $(includedir)
 
@@ -60,11 +63,12 @@ noinst_HEADERS += udp.h
 noinst_HEADERS += url.h
 noinst_HEADERS += version.h
 
-test: klvanc_eia708 klvanc_genscte104 klvanc_scte104 klvanc_smpte12_2 klvanc_afd klvanc_smpte2038 klvanc_gensmpte2038
+test: klvanc_eia708 klvanc_genscte104 klvanc_scte104 klvanc_smpte12_2 klvanc_afd klvanc_sdp klvanc_smpte2038 klvanc_sdp klvanc_gensmpte2038
 	./klvanc_eia708
 	./klvanc_genscte104
 	./klvanc_scte104
 	./klvanc_smpte12_2
 	./klvanc_gensmpte2038
 	./klvanc_afd
+	./klvanc_sdp
 	./klvanc_smpte2038 -i ../samples/smpte2038-sample-pid-01e9.ts -P 0x1e9
